JSON files reformatted for Corners' map (hope it works)